Correct incorrect reference to settings activity for wallpaper selection

--- a/app/src/main/res/xml/wallpaper.xml
+++ b/app/src/main/res/xml/wallpaper.xml
@@ -2,5 +2,5 @@
 <wallpaper
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:thumbnail="@drawable/wallpaper_thumnail"
-    android:settingsActivity="com.simplyapp.pixelskylivewallpaper.SettingsActivity"
+    android:settingsActivity="com.simplyapp.pixelskylivewallpaper.ui.SettingsActivity"
     android:description="@string/app_name" />
