Correct Incorrect layout context ref

--- a/app/src/main/res/layout/activity_set_wallpaper.xml
+++ b/app/src/main/res/layout/activity_set_wallpaper.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#777"
     android:orientation="vertical"
-    tools:context=".SettingsActivity">
+    tools:context="ui.SettingsActivity">
 
     <com.simplyapp.pixelskylivewallpaper.view.StarView
         android:layout_width="match_parent"
